--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
-  "name": "memos-cloud-openclaw-plugin",
+  "name": "@memtensor/memos-cloud-openclaw-plugin",
   "version": "0.1.1",
   "description": "OpenClaw lifecycle plugin for MemOS Cloud (add + recall memory)",
+  "keywords": [
+    "memos",
+    "memos-cloud",
+    "openclaw",
+    "plugin",
+    "memory"
+  ],
+  "homepage": "https://github.com/MemTensor/MemOS-Cloud-OpenClaw-Plugin#readme",
+  "bugs": {
+    "url": "https://github.com/MemTensor/MemOS-Cloud-OpenClaw-Plugin/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MemTensor/MemOS-Cloud-OpenClaw-Plugin.git"
+  },
   "type": "module",
   "author": "MemTensor",
   "license": "MIT",
